--- a/src/components/section/prizes.scss
+++ b/src/components/section/prizes.scss
@@ -1,17 +1,3 @@
-h1 {
-    font-size: 2.2rem;
-    margin-top: 80px;
-    text-align: center;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    text-align: center;
-    width: 100%;
-}
-
 .bg {
     position: fixed;
     top: 0;
@@ -29,7 +15,8 @@ h1 {
     flex: auto;
     font-size: 1.5rem;
     margin: 0 1vw calc(1vw + 50px) 1vw;
-    min-width: calc(33% - 2vw);
+    min-width: 200px;
+    max-width: 500px;
     position: relative;
     animation: entry 1s linear 1;
 }
@@ -58,7 +45,7 @@ h1 {
     vertical-align: middle;
     z-index: 5000;
     transition: .5s all ease;
-    transform: rotateX(40deg) scale(0.9);
+    transform: rotateX(30deg) scale(0.8);
 }
 
 .product:hover .content {
@@ -84,12 +71,12 @@ h1 {
 
 .effect-1 {
     animation: rotate 1.8s linear infinite;
-    background: cyan;
+    background: #2b0091;
 }
 
 .effect-2 {
     animation: rotate 1.2s linear reverse infinite;
-    background: #e7a9ff;
+    background: #ff00a4;
 }
 
 @keyframes rotate {
@@ -141,3 +128,122 @@ h1 {
     margin: 25%;
     width: 50%;
 }
+
+
+
+$cyan: #2b0091;
+$dark: #FFFFFF;
+$borderW: 2px;
+
+.blob-btn {
+  $numOfBlobs: 4;
+  z-index: 1;
+  position: relative;
+  padding: 20px 46px;
+  margin-bottom: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  color: $cyan;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  transition: color 0.5s;
+  cursor: pointer;
+  border-radius:30px;
+  
+  &:before {
+    content: "";
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: $borderW solid $cyan;
+    border-radius:30px;
+  }
+  
+  &:after {
+    content: "";
+    z-index: -2;
+    position: absolute;
+    left: $borderW*1.5;
+    top: $borderW*1.5;
+    width: 100%;
+    height: 100%;
+
+    transition: all 0.3s 0.2s;
+    border-radius:30px;
+  }
+  
+  &:hover {
+    color: $dark;
+    border-radius:30px;
+    
+    &:after {
+      transition: all 0.3s;
+      left: 0;
+      top: 0;
+      border-radius:30px;
+    }
+  }
+  
+  &__inner {
+    z-index: -1;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius:30px;
+    background:#ffffff;
+  }
+  
+  // additional container created, because in FF blobs are breaking overflow:hidden of element with svg gooey filter
+  &__blobs {
+    position: relative;
+    display: block;
+    height: 100%;
+    filter: url('#goo');
+  }
+  
+  &__blob {
+    position: absolute;
+    top: $borderW;
+    width: 100% / $numOfBlobs;
+    height: 100%;
+    background: $cyan;
+    border-radius: 100%;
+    transform: translate3d(0,150%,0) scale(1.7);
+    transition: transform 0.45s;
+    
+    @supports(filter: url('#goo')) {
+      transform: translate3d(0,150%,0) scale(1.4);
+    }
+    
+    @for $i from 1 through $numOfBlobs {
+      &:nth-child(#{$i}) {
+        left: ($i - 1) * (120% / $numOfBlobs);
+        transition-delay: ($i - 1) * 0.08s;
+      }
+    }
+    
+    .blob-btn:hover & {
+      transform: translateZ(0) scale(1.7);
+      
+      @supports(filter: url('#goo')) {
+        transform: translateZ(0) scale(1.4);
+      }
+    }
+  }
+  
+}
+
+*, *:before, *:after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
