--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 @layer base {
   body {
 
-    @apply font-sans bg-n-1 text-n-8 text-base;
+    @apply font-sans text-n-8 text-base;
     background: linear-gradient(
       90deg,
       rgba(22, 26, 49, 1) 0%,
