--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,8 @@
   }
 
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    /* --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%; */
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
